--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,14 +3,6 @@
 
 {% block content %}
 
-{#<h2>创建模态框（Modal）</h2>#}
-{#<!-- 按钮触发模态框 -->#}
-{#<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">#}
-{#	开始演示模态框#}
-{#</button>#}
-
-
-
 <!-- 模态框（Modal） -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
@@ -20,7 +12,7 @@
 					&times;
 				</button>
 				<h4 class="modal-title" id="myModalLabel">
-					模态框（Modal）标题
+					用户登录
 				</h4>
 			</div>
 			<div class="modal-body">
@@ -31,13 +23,6 @@
                     <a href="{{ url_for('auth.register') }}">Click here to register</a>
                 </p>
             </div>
-{#			<div class="modal-footer">#}
-{#				<button type="button" class="btn btn-default" data-dismiss="modal">关闭#}
-{#				</button>#}
-{#				<button type="button" class="btn btn-primary">#}
-{#					提交更改#}
-{#				</button>#}
-{#			</div>#}
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
 </div>
