--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -19,8 +19,7 @@
                 {{ wtf.quick_form(form) }}
                 <br>
                 <p>
-                    New user?
-                    <a href="{{ url_for('auth.register') }}">Click here to register</a>
+                    新用户?<a href="{{ url_for('auth.register') }}">点击注册</a>
                 </p>
             </div>
 		</div><!-- /.modal-content -->
