--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,8 +10,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/secret">概况</a></li>
-                    <li><a href="{{ url_for('auth.guanli') }}">管理</a></li>
+                    <li><a href="/">首页</a></li>
+                    <li><a href="#">管理</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             菜单3
@@ -24,10 +24,20 @@
                         </a>
                     </li>
                     <li><a href="#">菜单4</a></li>
-                    <li><a href="#">菜单5</a></li>
+                    <li><a href="{{ url_for('uploads.showphotos') }}">照片</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            配置
+                            <b class="caret"></b>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ url_for('uploads.uploadsphoto') }}">照片上传</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">子菜单2</a></li>
+                            </ul>
+                        </a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">首页</a></li>
                     {% if current_user.is_authenticated %}
                         <li>
                             <a href="{{ url_for('auth.logout') }}">{{ current_user.username }}  退出</a>
